fix branch name
Signed-off-by: Sylvain Hellegouarch <sh@defuze.org>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Release
 on:
   pull_request:
     branches-ignore:
-      - 'master'
+      - 'main'
   push:
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
