--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,12 +37,10 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Create Release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          name: Release ${{ github.ref }}
           draft: false
           prerelease: false
 
