--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 [project.optional-dependencies]
 gcp = [
     "google-auth>=2.30.0",
+    "tenacity>=9.0.0",
 ]
 k8s = [
     "kubernetes>=30.1.0",
