pass credentials as dict to K8S client if needed
Signed-off-by: Sylvain Hellegouarch <sh@defuze.org>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ aws = [
 
 [project.urls]
 Documentation = "https://lueur.dev/"
-Issues = "https://github.com/lueurdev/lueur/issues"
-Source = "https://github.com/lueurdev/lueur"
+Issues = "https://github.com/lueurdev/lueur-python-lib/issues"
+Source = "https://github.com/lueurdev/lueur-python-lib"
 
 [build-system]
 requires = ["pdm-backend"]
